--- a/index.html
+++ b/index.html
@@ -1,12 +1,137 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Седона</title>
-  </head>
-  <body>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
+<head>
+  <meta charset="utf-8">
+  <title>HTML Academy: Седона</title>
+</head>
 
-  </body>
+<body>
+  <header>
+    <nav>
+      <a>
+        <img src="https://via.placeholder.com/138x70" alt="Логотип сайта">
+      </a>
+      <ul>
+        <li><a href="blank.html">Информация</a></li>
+        <li><a href="blank.html">Фото и видео</a></li>
+        <li><a href="blank.html">Карта штата</a></li>
+        <li><a href="catalog.html">Гостиницы</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <h1>SEDONA</h1>
+    <section>
+      <h2>Welcome to Sedona</h2>
+      <!-- Здесь будет фоновая картинка-->
+    </section>
+    <section>
+      <h2>Седона — небольшой городок в Аризоне,<br>
+        заслуживающий большего!</h2>
+      <p>
+        Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!
+      </p>
+    </section>
+    <section>
+      <h3>Настоящий городок</h3>
+      <p>-№1-</p>
+      <p>Седона — не аттракцион для туристов, там
+        течёт своя жизнь</p>
+    </section>
+    <section>
+      <h2>Настоящий городок</h2>
+      <!-- Здесь будет фоновая картинка-->
+    </section>
+    <section>
+      <ul>
+        <li>
+          <h3>Жильё</h3>
+          <p>Рекомендуем пожить в настоящем<br>
+            мотеле, всё как в кино!</p>
+        </li>
+        <li>
+          <h3>Еда</h3>
+          <p>Всегда заказывайте фирменный бургер,<br>
+            вы не разочаруетесь!</p>
+        </li>
+        <li>
+          <h3>Сувениры</h3>
+          <p>Не только китайского, но и местного<br>
+            производства!</p>
+        </li>
+      </ul>
+    </section>
+    <section>
+      <h2>Мост дьявола</h2>
+      <!-- Здесь будет фоновая картинка-->
+    </section>
+    <section>
+      <h3>Там есть Мост дьявола</h3>
+      <p>-№2-</p>
+      <p>Да, по нему можно пройти! Если конечно
+        вы осмелитесь</p>
+    </section>
+    <section>
+      <ul>
+        <li>
+          <h3>Небольшая площадь</h3>
+          <p>— №3 —</p>
+          <p>все достопримечательности<br>
+            находятся очень близко</p>
+        </li>
+        <li>
+          <h3>красивая дорога</h3>
+          <p>— №4 —</p>
+          <p>ехать в седону из лас-вегаса совсем<br>
+            не скучно!</p>
+        </li>
+        <li>
+          <h3>мало туристов</h3>
+          <p>— №5 —</p>
+          <p>большинство едет в гранд каньон<br>
+            и толпится там</p>
+        </li>
+      </ul>
+    </section>
+    <section>
+      <h3>Заинтересовались?</h3>
+      <p>Укажите предполагаемые даты поездки,<br>
+        и мы покажем вам лучшие предложения гостиниц в седоне</p>
+      <button type="button">Поиск гостиницы в Седоне</button>
+    </section>
+    <section>
+      <h2>Карта</h2>
+      <!-- Здесь будет карта-->
+    </section>
+  </main>
+  <footer>
+    <section>
+      <h2>#VISITSEDONA</h2>
+      <a href="tel:+78005558628">+7 800 555-86-28</a>
+    </section>
+    <section>
+      <h2>Социальные сети</h2>
+      <ul>
+        <li>
+          <a href="#">Twitter</a>
+        </li>
+        <li>
+          <a href="#">Fb</a>
+        </li>
+        <li>
+          <a href="#">Youtube</a>
+        </li>
+      </ul>
+    </section>
+
+    <p>website by</p>
+    <img src="https://via.placeholder.com/115x33" alt="HTML academy">
+
+  </footer>
+
+
+
+</body>
+
 </html>
