--- a/catalog.html
+++ b/catalog.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <nav>
-      <a>
+      <a href="index.html">
         <img src="https://via.placeholder.com/138x70" alt="Логотип сайта">
       </a>
       <ul>
@@ -21,6 +21,106 @@
     </nav>
   </header>
   <main>
+    <section>
+      <h2>Фильтр гостиниц</h2>
+      <form method="get" action="https://echo.htmlacademy.ru">
+        <fieldset>
+          <legend>Инфраструктура:</legend>
+          <ul>
+            <li>
+              <input type="checkbox" name="swimmingpool" id="filter-swimmingpool" checked>
+              <label for="filter-swimmingpool">Бассейн</label>
+            </li>
+            <li>
+              <input type="checkbox" name="parking" id="filter-parking">
+              <label for="filter-parking">Парковка</label>
+            </li>
+            <li>
+              <input type="checkbox" name="wifi" id="filter-wifi">
+              <label for="filter-wifi">Wi-Fi</label>
+            </li>
+          </ul>
+        </fieldset>
+        <fieldset>
+          <legend>Тип жилья:</legend>
+          <ul>
+            <li>
+              <input type="checkbox" name="hotel" id="filter-hotel" checked>
+              <label for="filter-hotel">Гостиница</label>
+            </li>
+            <li>
+              <input type="checkbox" name="motel" id="filter-motel" checked>
+              <label for="filter-motel">Мотель</label>
+            </li>
+            <li>
+              <input type="checkbox" name="apartaments" id="filter-apartaments" checked>
+              <label for="filter-apartaments">Апартаменты</label>
+            </li>
+          </ul>
+        </fieldset>
+        <table>
+          <caption>Стоимость в сутки, ₽:</caption>
+          <tr>
+            <td>от 0</td>
+            <td>До 3000</td>
+          </tr>
+        </table>
+        <div>
+          <!--- Линия с бегунками-->
+        </div>
+        <button type="submit">Показать</button>
+      </form>
+    </section>
+    <section>
+      <h2>Найдено: 3</h2>
+      <h3>Сортировка:</h3>
+      <ul>
+        <li>По цене</li>
+        <li>По типу</li>
+        <li>По рейтингу</li>
+      </ul>
+      <div>
+        <!--- Кнопка вверх-->
+      </div>
+      <div>
+        <!--- Кнопка вниз-->
+      </div>
+    </section>
+    <section>
+      <h2>Результаты поиска</h2>
+      <ul>
+        <li>
+          <h3>Amara Resort & Spa</h3>
+          Гостиница От 4000 ₽
+          <a href="#">Подробнее</a>
+          <a href="#">Забронировать</a>
+          <div>
+            <!---5 звёзд-->
+          </div>
+          <span>Рейтинг: 8,5</span>
+        </li>
+        <li>
+          <h3>Desert Quail Inn</h3>
+          Мотель От 3000 ₽
+          <a href="#">Подробнее</a>
+          <a href="#">Забронировать</a>
+          <div>
+            <!---3 звезды-->
+          </div>
+          <span>Рейтинг: 8,9</span>
+        </li>
+        <li>
+          <h3>Villas at Poco Diablo</h3>
+          Апартаменты От 2000 ₽
+          <a href="#">Подробнее</a>
+          <a href="#">Забронировать</a>
+          <div>
+            <!---2 звезды-->
+          </div>
+          <span>Рейтинг: 9,2</span>
+        </li>
+      </ul>
+    </section>
 
   </main>
   <footer>
