--- a/catalog.html
+++ b/catalog.html
@@ -11,7 +11,7 @@
   <header>
     <nav>
       <a href="index.html">
-        <img src="https://via.placeholder.com/138x70" alt="Логотип сайта">
+        <img src="img/logo.png" alt="Логотип сайта">
       </a>
       <ul>
         <li><a href="blank.html">Информация</a></li>
@@ -24,53 +24,56 @@
   <main>
     <section>
       <h2>Фильтр гостиниц</h2>
-      <form method="get" action="https://echo.htmlacademy.ru">
-        <fieldset>
-          <legend>Инфраструктура:</legend>
-          <ul>
-            <li>
-              <input type="checkbox" name="swimmingpool" id="filter-swimmingpool" checked>
-              <label for="filter-swimmingpool">Бассейн</label>
-            </li>
-            <li>
-              <input type="checkbox" name="parking" id="filter-parking">
-              <label for="filter-parking">Парковка</label>
-            </li>
-            <li>
-              <input type="checkbox" name="wifi" id="filter-wifi">
-              <label for="filter-wifi">Wi-Fi</label>
-            </li>
-          </ul>
-        </fieldset>
-        <fieldset>
-          <legend>Тип жилья:</legend>
-          <ul>
-            <li>
-              <input type="checkbox" name="hotel" id="filter-hotel" checked>
-              <label for="filter-hotel">Гостиница</label>
-            </li>
-            <li>
-              <input type="checkbox" name="motel" id="filter-motel" checked>
-              <label for="filter-motel">Мотель</label>
-            </li>
-            <li>
-              <input type="checkbox" name="apartaments" id="filter-apartaments" checked>
-              <label for="filter-apartaments">Апартаменты</label>
-            </li>
-          </ul>
-        </fieldset>
-        <table>
-          <caption>Стоимость в сутки, ₽:</caption>
-          <tr>
-            <td>от 0</td>
-            <td>До 3000</td>
-          </tr>
-        </table>
-        <div>
-          <!--- Линия с бегунками-->
-        </div>
-        <button type="submit">Показать</button>
-      </form>
+      <div>
+
+        <form method="get" action="https://echo.htmlacademy.ru">
+          <fieldset>
+            <legend>Инфраструктура:</legend>
+            <ul>
+              <li>
+                <input type="checkbox" name="swimmingpool" id="filter-swimmingpool" checked>
+                <label for="filter-swimmingpool">Бассейн</label>
+              </li>
+              <li>
+                <input type="checkbox" name="parking" id="filter-parking">
+                <label for="filter-parking">Парковка</label>
+              </li>
+              <li>
+                <input type="checkbox" name="wifi" id="filter-wifi">
+                <label for="filter-wifi">Wi-Fi</label>
+              </li>
+            </ul>
+          </fieldset>
+          <fieldset>
+            <legend>Тип жилья:</legend>
+            <ul>
+              <li>
+                <input type="checkbox" name="hotel" id="filter-hotel" checked>
+                <label for="filter-hotel">Гостиница</label>
+              </li>
+              <li>
+                <input type="checkbox" name="motel" id="filter-motel" checked>
+                <label for="filter-motel">Мотель</label>
+              </li>
+              <li>
+                <input type="checkbox" name="apartaments" id="filter-apartaments" checked>
+                <label for="filter-apartaments">Апартаменты</label>
+              </li>
+            </ul>
+          </fieldset>
+          <table>
+            <caption>Стоимость в сутки, ₽:</caption>
+            <tr>
+              <td>от 0</td>
+              <td>До 3000</td>
+            </tr>
+          </table>
+          <div>
+            <!--- Линия с бегунками-->
+          </div>
+          <button type="submit">Показать</button>
+        </form>
+      </div>
     </section>
     <section>
       <h2>Найдено: 3</h2>
@@ -91,34 +94,61 @@
       <h2>Результаты поиска</h2>
       <ul>
         <li>
-          <h3>Amara Resort & Spa</h3>
-          Гостиница От 4000 ₽
-          <a href="#">Подробнее</a>
-          <a href="#">Забронировать</a>
           <div>
-            <!---5 звёзд-->
+            <img src="img/amara_resort.jpg" width="135" height="90" alt="Гостиница Амара">
           </div>
-          <span>Рейтинг: 8,5</span>
+          <div>
+            <h3>Amara Resort & Spa</h3>
+            <p>
+              Гостиница От 4000 ₽
+              <a href="#">Подробнее</a>
+              <a href="#">Забронировать</a>
+            </p>
+          </div>
+          <div>
+            <p>
+              <!---5 звёзд-->
+            </p>
+            <span>Рейтинг: 8,5</span>
+          </div>
         </li>
         <li>
-          <h3>Desert Quail Inn</h3>
-          Мотель От 3000 ₽
-          <a href="#">Подробнее</a>
-          <a href="#">Забронировать</a>
           <div>
-            <!---3 звезды-->
+            <img src="img/Desert_quail.jpg" width="135" height="90" alt="Мотель Desert">
           </div>
-          <span>Рейтинг: 8,9</span>
+          <div>
+            <h3>Desert Quail Inn</h3>
+            <p>
+              Мотель От 3000 ₽
+              <a href="#">Подробнее</a>
+              <a href="#">Забронировать</a>
+            </p>
+          </div>
+          <div>
+            <p>
+              <!---3 звезды-->
+            </p>
+            <span>Рейтинг: 8,9</span>
+          </div>
         </li>
         <li>
-          <h3>Villas at Poco Diablo</h3>
-          Апартаменты От 2000 ₽
-          <a href="#">Подробнее</a>
-          <a href="#">Забронировать</a>
           <div>
-            <!---2 звезды-->
+            <img src="img/villas_poco.jpg" width="135" height="90" alt="Апартаменты">
           </div>
-          <span>Рейтинг: 9,2</span>
+          <div>
+            <h3>Villas at Poco Diablo</h3>
+            <p>
+              Апартаменты От 2000 ₽
+              <a href="#">Подробнее</a>
+              <a href="#">Забронировать</a>
+            </p>
+          </div>
+          <div>
+            <p>
+              <!---2 звезды-->
+            </p>
+            <span>Рейтинг: 9,2</span>
+          </div>
         </li>
       </ul>
     </section>
@@ -145,7 +175,7 @@
     </section>
 
     <p>website by</p>
-    <img src="https://via.placeholder.com/115x33" alt="HTML academy">
+    <img src="img/logo_htmlacademy.png" width="115" height="33" alt="HTML academy">
 
   </footer>
 
