Графика всех страниц_1

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           течёт своя жизнь</p>
       </div>
       <div>
-        <!-- Здесь будет фоновая картинка-->
+        <img src="img/true_town.jpg" width="800" height="256" alt="настоящий городок">
       </div>
     </section>
     <section>
@@ -69,7 +69,7 @@
     <section>
       <h2>Мост дьявола</h2>
       <div>
-        <!-- Здесь будет фоновая картинка-->
+        <img src="img/bridge_of_Devil.jpg" width="800" height="256" alt="Мост дьявола">
       </div>
       <div>
         <h3>Там есть Мост дьявола</h3>
