--- a/catalog.html
+++ b/catalog.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html class="page" lang="ru">
 
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Седона. Каталог</title>
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&amp;subset=latin,cyrillic;display=swap">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
-  <!---Повторная отправка, изменений нет-->
-  <header>
-    <nav>
-      <a href="index.html">
+
+<body class="page-body">
+  <header class="main-header">
+    <nav class="main-navigation">
+      <a class="main-header-logo" href="index.html">
         <img src="img/logo.png" alt="Логотип сайта">
       </a>
-      <ul>
+      <ul class="site-navigation">
         <li><a href="blank.html">Информация</a></li>
         <li><a href="blank.html">Фото и видео</a></li>
         <li><a href="blank.html">Карта штата</a></li>
@@ -21,10 +25,10 @@
       </ul>
     </nav>
   </header>
-  <main>
-    <section>
+  <main class="container">
+    <section class="filter">
       <h2>Фильтр гостиниц</h2>
-      <div>
+      <div class="checkbox">
 
         <form method="get" action="https://echo.htmlacademy.ru">
           <fieldset>
@@ -61,7 +65,7 @@
               </li>
             </ul>
           </fieldset>
-          <table>
+          <table class="price">
             <caption>Стоимость в сутки, ₽:</caption>
             <tr>
               <td>от 0</td>
@@ -71,112 +75,128 @@
           <div>
             <!--- Линия с бегунками-->
           </div>
-          <button type="submit">Показать</button>
+          <button class="button show-button" type="submit">Показать</button>
         </form>
       </div>
     </section>
-    <section>
+    <section class="search-result-head">
       <h2>Найдено: 3</h2>
       <h3>Сортировка:</h3>
-      <ul>
-        <li>По цене</li>
-        <li>По типу</li>
-        <li>По рейтингу</li>
+      <ul class="sort-list">
+        <li class="sort-item sort-button">По цене</li>
+        <li class="sort-item sort-button">По типу</li>
+        <li class="sort-item sort-button">По рейтингу</li>
       </ul>
-      <div>
+      <div class="button-up">
         <!--- Кнопка вверх-->
       </div>
-      <div>
+      <div class="button-down">
         <!--- Кнопка вниз-->
       </div>
     </section>
-    <section>
+    <section class="search-result">
       <h2>Результаты поиска</h2>
-      <ul>
-        <li>
-          <div>
+      <ul class="search-result-list">
+        <li class="search-result-item">
+          <div class="image-result">
             <img src="img/amara_resort.jpg" width="135" height="90" alt="Гостиница Амара">
           </div>
-          <div>
-            <h3>Amara Resort & Spa</h3>
+          <div class="result-description">
+            <h3 class="result-name-hotel">
+              <a href="#">Amara Resort & Spa</a>
+            </h3>
             <p>
               Гостиница От 4000 ₽
-              <a href="#">Подробнее</a>
-              <a href="#">Забронировать</a>
+              <a class="button detailed-button" href="#">Подробнее</a>
+              <a class="button to-book-button" href="#">Забронировать</a>
             </p>
           </div>
-          <div>
-            <p>
-              <!---5 звёзд-->
-            </p>
-            <span>Рейтинг: 8,5</span>
+          <div class="rating-stars">
+            <span class="icon-star">::before</span>
+            <span class="icon-star">::before</span>
+            <span class="icon-star">::before</span>
+            <span class="icon-star">::before</span>
+            <span class="icon-star">::before</span>
+            <span class="rating">Рейтинг: 8,5</span>
           </div>
         </li>
-        <li>
-          <div>
+        <li class="search-result-item">
+          <div class="image-result">
             <img src="img/Desert_quail.jpg" width="135" height="90" alt="Мотель Desert">
           </div>
-          <div>
-            <h3>Desert Quail Inn</h3>
+          <div class="result-description">
+            <h3 class="result-name-hotel">
+              <a href="#">Desert Quail Inn</a>
+            </h3>
             <p>
               Мотель От 3000 ₽
-              <a href="#">Подробнее</a>
-              <a href="#">Забронировать</a>
+              <a class="button detailed-button" href="#">Подробнее</a>
+              <a class="button to-book-button" href="#">Забронировать</a>
             </p>
           </div>
-          <div>
-            <p>
-              <!---3 звезды-->
-            </p>
-            <span>Рейтинг: 8,9</span>
+          <div class="rating-stars">
+            <span class="icon-star">::before</span>
+            <span class="icon-star">::before</span>
+            <span class="rating">Рейтинг: 8,9</span>
           </div>
         </li>
-        <li>
-          <div>
+        <li class="search-result-item">
+          <div class="image-result">
             <img src="img/villas_poco.jpg" width="135" height="90" alt="Апартаменты">
           </div>
-          <div>
-            <h3>Villas at Poco Diablo</h3>
+          <div class="result-description">
+            <h3 class="result-name-hotel">
+              <a href="#">Villas at Poco Diablo</a>
+            </h3>
             <p>
               Апартаменты От 2000 ₽
-              <a href="#">Подробнее</a>
-              <a href="#">Забронировать</a>
+              <a class="button detailed-button" href="#">Подробнее</a>
+              <a class="button to-book-button" href="#">Забронировать</a>
             </p>
           </div>
-          <div>
-            <p>
-              <!---2 звезды-->
-            </p>
-            <span>Рейтинг: 9,2</span>
+          <div class="rating-stars">
+            <span class="icon-star">::before</span>
+            <span class="icon-star">::before</span>
+            <span class="icon-star">::before</span>
+            <span class="rating">Рейтинг: 9,2</span>
           </div>
         </li>
       </ul>
     </section>
 
   </main>
-  <footer>
-    <section>
+  <footer class="main-footer">
+    <section class="contacts">
       <h2>#VISITSEDONA</h2>
-      <a href="tel:+78005558628">+7 800 555-86-28</a>
+      <a class="contact-phone" href="tel:+78005558628">+7 800 555-86-28</a>
     </section>
-    <section>
+    <section class="social">
       <h2>Социальные сети</h2>
-      <ul>
-        <li>
-          <a href="#">Twitter</a>
+      <ul class="social-list">
+        <li class="social-item">
+          <a href="#">
+            <img src="img/twitter.png" alt="Twitter">
+          </a>
         </li>
-        <li>
-          <a href="#">Fb</a>
+        <li class="social-item">
+          <a href="#">
+            <img src="img/fb-icon.png" alt="Fb">
+          </a>
         </li>
-        <li>
-          <a href="#">Youtube</a>
+        <li class="social-item">
+          <a href="#">
+            <img src="img/youtube.png" alt="Youtube">
+          </a>
         </li>
       </ul>
     </section>
 
     <p>website by</p>
-    <img src="img/logo_htmlacademy.png" width="115" height="33" alt="HTML academy">
-
+    <section>
+      <a class="link-htmlacademy" href="https://htmlacademy.ru/">
+        <img src="img/logo_htmlacademy.png" width="115" height="33" alt="HTML academy">
+      </a>
+    </section>
   </footer>
 
 </body>
