--- a/catalog.html
+++ b/catalog.html
@@ -112,11 +112,11 @@
             </p>
           </div>
           <div class="rating-stars">
-            <span class="icon-star">::before</span>
-            <span class="icon-star">::before</span>
-            <span class="icon-star">::before</span>
-            <span class="icon-star">::before</span>
-            <span class="icon-star">::before</span>
+            <span class="icon-star"></span>
+            <span class="icon-star"></span>
+            <span class="icon-star"></span>
+            <span class="icon-star"></span>
+            <span class="icon-star"></span>
             <span class="rating">Рейтинг: 8,5</span>
           </div>
         </li>
@@ -135,8 +135,8 @@
             </p>
           </div>
           <div class="rating-stars">
-            <span class="icon-star">::before</span>
-            <span class="icon-star">::before</span>
+            <span class="icon-star"></span>
+            <span class="icon-star"></span>
             <span class="rating">Рейтинг: 8,9</span>
           </div>
         </li>
@@ -155,9 +155,9 @@
             </p>
           </div>
           <div class="rating-stars">
-            <span class="icon-star">::before</span>
-            <span class="icon-star">::before</span>
-            <span class="icon-star">::before</span>
+            <span class="icon-star"></span>
+            <span class="icon-star"></span>
+            <span class="icon-star"></span>
             <span class="rating">Рейтинг: 9,2</span>
           </div>
         </li>
