--- a/catalog.html
+++ b/catalog.html
@@ -34,15 +34,15 @@
           <fieldset>
             <legend>Инфраструктура:</legend>
             <ul>
-              <li>
+              <li class="checkbox-filter">
                 <input type="checkbox" name="swimmingpool" id="filter-swimmingpool" checked>
                 <label for="filter-swimmingpool">Бассейн</label>
               </li>
-              <li>
+              <li class="checkbox-filter">
                 <input type="checkbox" name="parking" id="filter-parking">
                 <label for="filter-parking">Парковка</label>
               </li>
-              <li>
+              <li class="checkbox-filter">
                 <input type="checkbox" name="wifi" id="filter-wifi">
                 <label for="filter-wifi">Wi-Fi</label>
               </li>
@@ -51,15 +51,15 @@
           <fieldset>
             <legend>Тип жилья:</legend>
             <ul>
-              <li>
+              <li class="checkbox-filter">
                 <input type="checkbox" name="hotel" id="filter-hotel" checked>
                 <label for="filter-hotel">Гостиница</label>
               </li>
-              <li>
+              <li class="checkbox-filter">
                 <input type="checkbox" name="motel" id="filter-motel" checked>
                 <label for="filter-motel">Мотель</label>
               </li>
-              <li>
+              <li class="checkbox-filter">
                 <input type="checkbox" name="apartaments" id="filter-apartaments" checked>
                 <label for="filter-apartaments">Апартаменты</label>
               </li>
