--- a/index.html
+++ b/index.html
@@ -162,11 +162,11 @@
       <form class="search-form" action="https://echo.htmlacademy.ru" method="post">
         <p class="arrival-date">
           <label for="arrival-date">Дата заезда:</label>
-          <input id="arrival-date" type="text" name="date" placeholder="24 апреля 2017">
+          <input class="calendar-icon" id="arrival-date" type="text" name="date" placeholder="24 апреля 2017">
         </p>
         <p class="departure-date">
           <label for="departure-date">Дата выезда:</label>
-          <input id="departure-date" type="text" name="date" placeholder="4 июля 2017">
+          <input class="calendar-icon" id="departure-date" type="text" name="date" placeholder="4 июля 2017">
         </p>
         <p class="age">
 
